<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fitsSystemWindows="true"
    tools:context=".QuartaTela">

    <EditText
        android:id="@+id/editTextTemperature"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:hint="@string/temperature_hint"
        android:inputType="numberDecimal"
        android:importantForAccessibility="yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="temperature"/>

    <Button
        android:id="@+id/buttonCelsiusToFahrenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celsius_to_fahrenheit"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/celsius_to_fahrenheit_button"
        app:layout_constraintTop_toBottomOf="@+id/editTextTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/buttonFahrenheitToCelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fahrenheit_to_celsius"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/fahrenheit_to_celsius_button"
        app:layout_constraintTop_toBottomOf="@+id/buttonCelsiusToFahrenheit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_label"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonFahrenheitToCelsius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>